GET Requests for Center and CenterType work. Still working on the GET for Appointments, as I need the full Center instead of just the centerID returned.

--- a/HackathonREST/HackathonREST.csproj
+++ b/HackathonREST/HackathonREST.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="App-Data\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
