Added more thorough error messages for POST and PUT Bad Request errors, and for Not Found errors. Still need to find how to get Center information for GET request from appointments.

--- a/HackathonREST/HackathonREST.csproj
+++ b/HackathonREST/HackathonREST.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Folder Include="App-Data\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
   <ItemGroup>
