--- a/HackathonREST/HackathonREST.csproj
+++ b/HackathonREST/HackathonREST.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="App-Data\" />
     <Folder Include="Helpers\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
